--- a/Index.html
+++ b/Index.html
@@ -1,102 +1,117 @@
-<style>
-p{
-  margin: 50px;
-  text-align: center;
-  color: white;
-  font-size: 50px;
-}
-Text01{
-  margin: 10px;
-  color: white;
-  font-size: 20px;
-  text-align: center;
-}
-div.TextBox{
-  padding: 10px 20px;
-  color: black;
-  font-size: 20px;
-  text-align: center;
-}
-button {
-  background-color: #737373;
-  border: none;
-  color: black;
-  padding: 15px 100px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-button:hover {
-  background-color: #616161;
-}
-body{
-  background-color: #737373;
-  font-family: Arial;
-}
+<!DOCTYPE html>
+<html lang="cz">
+  <meta charset="UTF-8">
+  <title>Hownovíno</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="">
 
-div.box1 {
-  float: left;
-  text-align: center;
-  background-color: white;
-  margin-bottom: 25px;
-  width: 19.2%;
-  padding: 15px 100px;
-  margin: 5px;
+  <style>
 
-}
+  p {
+    margin: 50px;
+    text-align: center;
+    color: white;
+    font-size: 50px;
+  }
 
-</style>
+  Text01 {
+    margin: 10px;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+  }
 
-<body>
+  div.TextBox {
+    padding: 10px 20px;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+  }
 
-<p> Nadpis </p>
-<Text01> Tato stránka poskytuje podezřelé služby... </Text01>
+  button {
+    background-color: #00ff00;
+    border-radius: 10px;
+    border: none;
+    color: black;
+    padding: 15px 100px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
 
-<br>
+  button:hover {
+    background-color: #009900;
+  }
 
-<div class="box1">
-  <img src="meat.jpg" alt="meatImage" width="200" height="200">
-  <div class="TextBox">
-    <p2> Balicek 1 </p2>
-  </div>
-  <button> Buy </button>
-</div>
-<div class="box1">
-  <img src="meat.jpg" alt="meatImage" width="200" height="200">
-  <div class="TextBox">
-    <p2> Balicek 2 </p2>
-  </div>
-  <button> Buy </button>
-</div>
-<div class="box1">
-  <img src="meat.jpg" alt="meatImage" width="200" height="200">
-  <div class="TextBox">
-    <p2> Balicek 3 </p2>
-  </div>
-  <button> Buy </button>
-</div>
-<div class="box1">
-  <img src="meat.jpg" alt="meatImage" width="200" height="200">
-  <div class="TextBox">
-    <p2> Balicek 1 </p2>
-  </div>
-  <button> Buy </button>
-</div>
-<div class="box1">
-  <img src="meat.jpg" alt="meatImage" width="200" height="200">
-  <div class="TextBox">
-    <p2> Balicek 2 </p2>
-  </div>
-  <button> Buy </button>
-</div>
-<div class="box1">
-  <img src="meat.jpg" alt="meatImage" width="200" height="200">
-  <div class="TextBox">
-    <p2> Balicek 3 </p2>
-  </div>
-  <button> Buy </button>
-</div>
-</body>
+  body {
+    background-color: rgb(25, 25, 25);
+    font-family: Arial;
+  }
+
+  div.box1 {
+    float: left;
+    text-align: center;
+    background-color: white;
+    margin-bottom: 25px;
+    width: 19.2%;
+    padding: 15px 100px;
+    margin: 5px;
+    border-radius: 10px;
+    background-color: rgba(128, 128, 128, 0.5);
+  }
+
+  </style>
+
+  <body>
+    <p> Nadpis </p>
+    <Text01> Tato stránka poskytuje podezřelé služby... </Text01>
+
+    <br>
+
+    <div class="box1">
+      <img src="meat.jpg" alt="meatImage" width="200" height="200">
+      <div class="TextBox">
+        <p2> Balicek 1 </p2>
+      </div>
+      <button> Buy </button>
+    </div>
+    <div class="box1">
+      <img src="meat.jpg" alt="meatImage" width="200" height="200">
+      <div class="TextBox">
+        <p2> Balicek 2 </p2>
+      </div>
+      <button> Buy </button>
+    </div>
+    <div class="box1">
+      <img src="meat.jpg" alt="meatImage" width="200" height="200">
+      <div class="TextBox">
+        <p2> Balicek 3 </p2>
+      </div>
+      <button> Buy </button>
+    </div>
+    <div class="box1">
+      <img src="meat.jpg" alt="meatImage" width="200" height="200">
+      <div class="TextBox">
+        <p2> Balicek 1 </p2>
+      </div>
+      <button> Buy </button>
+    </div>
+    <div class="box1">
+      <img src="meat.jpg" alt="meatImage" width="200" height="200">
+      <div class="TextBox">
+        <p2> Balicek 2 </p2>
+      </div>
+      <button> Buy </button>
+    </div>
+    <div class="box1">
+      <img src="meat.jpg" alt="meatImage" width="200" height="200">
+      <div class="TextBox">
+        <p2> Balicek 3 </p2>
+      </div>
+      <button> Buy </button>
+    </div>
+  </body>
+</html>
