--- a/About.html
+++ b/About.html
@@ -2,13 +2,17 @@
 <html>
   <head>
   <style>
+    body {
+      background-color: white;
+      font-family: Arial;
+    }
     ul {
       list-style-type: none;
       margin: 0;
       padding: 0;
       overflow: hidden;
-      border: 1px solid #e7e7e7;
       background-color: #f3f3f3;
+      border-radius: 10px;
     }
 
     li {
@@ -28,18 +32,17 @@
     }
 
     li a.active {
-      color: white;
-      background-color: #04AA6D;
+      color: black;
+      background-color: #08ff00;
     }
   </style>
   </head>
   <body>
     <top>
       <ul>
-        <li><a class="active" href="#home">Home</a></li>
-        <li><a href="Index.html">News</a></li>
+        <li><a class="active" href="Index.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="#about">About</a></li>
       </ul>
     </top>
   </body>
