--- a/About.html
+++ b/About.html
@@ -35,15 +35,21 @@
       color: black;
       background-color: #08ff00;
     }
+    
+    p.aboutText {
+      color: black;
+      font-family: Arial;
+    }
   </style>
   </head>
   <body>
     <top>
       <ul>
-        <li><a class="active" href="Index.html">Home</a></li>
-        <li><a href="About.html">About</a></li>
+        <li><a href="Index.html">Home</a></li>
+        <li><a class="active" href="About.html">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </top>
+    <p class="aboutText">Jsme teplý.</p>
   </body>
 </html>
