--- a/Index.html
+++ b/Index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html lang="cz">
-  <meta charset="UTF-8">
+<html lang="cz"><head><meta charset="UTF-8">
   <title>Hownovíno</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="">
 
   <style>
     p {
-      margin: 20px;
-      text-align: center;
+      line-height: 1.3;
+      margin-top: 80px;
+      margin-left: 150px;
+      text-align: left;
       color: #3C3C3C;
       font-size: 50px;
     }
 
-    mainText {
-      margin: 10px;
+    p.mainText {
+      line-height: 1.5;
+      margin-left: 150px;
+      margin-bottom: 70px;
+      margin-top: 20px;
       color: #3C3C3C;
       font-size: 20px;
-      text-align: center;
+      text-align: left;
     }
 
     div.TextBox {
@@ -43,6 +47,7 @@
       width: 400px;
       max-width: 100%;
       padding: 15px;
+      box-shadow: 0 0.625rem 2.5rem rgba(17,48,77,0.2);
     }
 
     button:hover {
@@ -57,6 +62,16 @@
       width: 600px;
       max-width: 100%;
       height: auto;
+    }
+    img.screenshot {
+      margin-top: 60px;
+      margin-right: 130px;
+      width: 180px;
+      max-width: 100%;
+      height: auto;
+      float: right;
+      border-radius: 10px;
+      box-shadow: 0 0.625rem 2.5rem rgba(17,48,77,0.3);
     }
     div.package {
       box-shadow: 0 0.625rem 2.5rem rgba(17,48,77,0.3);
@@ -77,8 +92,10 @@
       padding: 0;
       overflow: hidden;
       /* border: 1px solid #e7e7e7; */
-      background-color: #f3f3f3;
+      background-color: #ffffff;
       border-radius: 10px;
+      font-size: 18px;
+      box-shadow: 0 0.625rem 5rem rgba(17,48,77,0.2);
     }
 
     li {
@@ -89,7 +106,7 @@
       display: block;
       color: #666;
       text-align: center;
-      padding: 14px 16px;
+      padding: 18px 30px;
       text-decoration: none;
     }
 
@@ -103,7 +120,7 @@
     }
   </style>
 
-  <body>
+  </head><body>
     <top>
       <ul>
         <li><a class="active" href="Index.html">Home</a></li>
@@ -112,9 +129,11 @@
       </ul>
     </top>
     <content>
-      <p> Nadpis </p>
-      <mainText> Tato stránka poskytuje podezřelé služby... </mainText>
-
+      <img class="screenshot" src="Screenshot1.png" alt="Screenshot1">
+      <img class="screenshot" src="Screenshot2.jpg" alt="Screenshot2">
+      <p>  Pořiďte svým blízkým <br> vlastní mobilní hru  </p>
+      <p class="mainText"> Chcete pro svoje blízké sehnat dárek, ale už nevíte jaký? <br> Máme pro vás řešení. Nabízíme vytvoření vlastní hry tak, <br> jak to potřebujete, která může být jak na počítač, tak na <br> mobilní zařízení. </p>
+      
       <br>
 
       <div class="package">
@@ -161,5 +180,6 @@
         <button> Buy </button>
       </div>
     </content>
-  </body>
-</html>
+  
+
+</body></html>
