Organizace, zaplatit tlačítko

--- a/GameChoice/gameChoice.html
+++ b/GameChoice/gameChoice.html
@@ -20,9 +20,9 @@
           <div class="TextBoxTitle">
             <p2> <b> Flappy Bird </b> </p2>
           </div>
-          <img class="screenshot" src="FlappyBird/FlappyBirdScreenshot.png" alt="betterIcon">
+          <img class="screenshot" src="Screenshots/FlappyBird.png" alt="icon">
           <div class="TextBox">
-            <form action="FlappyBird.html">
+            <form action="Games/flappyBird.html">
               <button> Vybrat </button>
             </form>
           </div>
@@ -32,7 +32,7 @@
           <div class="TextBoxTitle">
             <p2> <b> PacMan </b> </p2>
           </div>
-          <img class="screenshot" src="PacmanScreenshot.png" alt="betterIcon">
+          <img class="screenshot" src="Screenshots/Pacman.png" alt="icon">
           <div class="TextBox">
             <button> Vybrat </button>
           </div>
@@ -42,7 +42,7 @@
           <div class="TextBoxTitle">
             <p2> <b> Had </b> </p2>
           </div>
-          <img class="screenshot" src="SnakeScreenshot.png" alt="betterIcon">
+          <img class="screenshot" src="Screenshots/Snake.png" alt="icon">
           <div class="TextBox">
             <button> Vybrat </button>
           </div>
@@ -52,7 +52,7 @@
           <div class="TextBoxTitle">
             <p2> <b> Sbírání hub</b> </p2>
           </div>
-          <img class="screenshot" src="CollectingScreenshot.png" alt="betterIcon">
+          <img class="screenshot" src="Screenshots/Collecting.png" alt="icon">
           <div class="TextBox">
             <button> Vybrat </button>
           </div>
@@ -62,7 +62,7 @@
           <div class="TextBoxTitle">
             <p2> <b> Chytání jablek </b> </p2>
           </div>
-          <img class="screenshot" src="CatchingScreenshot.png" alt="betterIcon">
+          <img class="screenshot" src="Screenshots/Catching.png" alt="icon">
           <div class="TextBox">
             <button> Vybrat </button>
           </div>
