--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <p2> <b> Od 499 kč </b> </p2>        
           </div>
           <div class="TextBox">
-            <form action="gameChoice.html">
-              <button href="gameChoice.html"> Více informací </button>
+            <form action="GameChoice/gameChoice.html">
+              <button> Více informací </button>
             </form>
             <br>
             <hr>
@@ -66,7 +66,7 @@
             <p2> <b> Od 999 kč </b> </p2>        
           </div>
           <div class="TextBox">
-            <form action="gameChoice.html">
+            <form action="GameChoice/gameChoice.html">
               <button> Více informací </button>
             </form>
             <br>
