--- a/GameChoice/Games/flappyBird.html
+++ b/GameChoice/Games/flappyBird.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="cz"><head><meta charset="UTF-8">
   <title>Vlastní hry</title>
+
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="topnav.css">
   <link rel="stylesheet" type="text/css" href="gameOptions.css">
@@ -20,7 +23,7 @@
           <p class="firstDescription"> Ovládání: <i> kliknutí myši </i> </p>
           <br>
           <p class="firstDescription"> Cíl hry: <i> dostat se co nejdál </i> </p>
-          <iframe src="file:///C:/Users/Admin/Desktop/Website/Website/BuildFlappyBird/FlappyBirdGame.html" style="width: 750px; height: 1000px;"> </iframe>  
+          <iframe src="BuildFlappyBird/FlappyBirdGame.html"> </iframe>  
         </div>
         <div class="package">
           <p class="descriptionTitle"> Základní nastavení </p>
@@ -33,14 +36,14 @@
           <div class="inputLine">
             <label for="platforms">Platforma:</label>
             <img class="normalIcon" id="platformIcon" alt="icon" src = "windows.png">
-            <select name="cars" id="platform" onclick="onPlatformSelected()">
+            <select name="platform" id="platform" onclick="onPlatformSelected()">
               <option value="windows" onclick="onPlatformSelected()">Windows</option>
               <option value="android">Android</option>
             </select>
           </div>
           <br><br><br>
           <div class="inputLine">
-            <label for="fname">Ikona hry:</label> 
+            <label for="icon">Ikona hry:</label> 
             <img class="gameIcon" id="icon" alt="icon" src = "FlappyBird/FlappyBirdIcon.png">
             <input type="file" class="file" id="inputIcon" name="avatar" accept="image/png, image/jpeg" onchange="onCustomIconChange('inputIcon', 'icon')"/>
           </div>
@@ -54,9 +57,9 @@
         <div class="package">
           <p class="descriptionTitle"> Grafika: </p>
           <div class="inputLine">
-            <label for="cars">Hlavní postava:</label>
+            <label for="main">Hlavní postava:</label>
             <img class="normalIcon" id="mainCharacterIcon" alt="icon" src = "FlappyBird/BirdYellow.png">
-            <select name="cars" id="character" onclick='onCustomOptionChange("character", "mainCharacterIcon", "FlappyBird/BirdYellow.png", "FlappyBird/BirdRed.png", "FlappyBird/BirdGreen.png")'>
+            <select name="character" id="character" onclick='onCustomOptionChange("character", "mainCharacterIcon", "FlappyBird/BirdYellow.png", "FlappyBird/BirdRed.png", "FlappyBird/BirdGreen.png")'>
               <option value="1">Žlutý pták (výchozí)</option>
               <option value="2">Červený pták</option>
               <option value="3">Zelený pták</option>
@@ -65,20 +68,20 @@
           </div>
           <br><br><br> <br><br><br>
           <div class="inputLine">
-            <label for="cars">Trubky:</label>
+            <label for="pipes">Trubky:</label>
             <img class="normalIcon" id="PipeIcon" alt="icon" src = "FlappyBird/PipeGreen.png" style="width: 15px">
-            <select name="cars" id="pipe" onclick='onCustomOptionChange("pipe", "PipeIcon", "FlappyBird/PipeGreen.png", "FlappyBird/PipeYellow.png", "FlappyBird/PipePlastic.png")'>
+            <select name="pipe" id="pipe" onclick='onCustomOptionChange("pipe", "PipeIcon", "FlappyBird/PipeGreen.png", "FlappyBird/PipeYellow.png", "FlappyBird/PipePlastic.png")'>
               <option value="1">Zelená trubka (výchozí)</option>
               <option value="2">Žlutá trubka</option>
               <option value="3">Plastová trubka</option>
             </select>
             <input type="file" class="file" id="inputPipe" name="avatar" accept="image/png, image/jpeg" onchange="onCustomTextureChange('inputPipe', 'PipeIcon')"/>
           </div>
-          <br><br><br> <br><br><br>
+          <br><br> <br><br>
           <div class="inputLine">
-            <label for="cars">Pozadí:</label>
+            <label for="background">Pozadí:</label>
             <img class="normalIcon" id="backgroundIcon" alt="icon" src = "FlappyBird/BackgroundCity.png" style="width: 60px">
-            <select name="cars" id="background" onclick=
+            <select name="background" id="background" onclick=
             'onCustomOptionChange("background", "backgroundIcon", "FlappyBird/BackgroundCity.png", "FlappyBird/BackgroundForest.png", "FlappyBird/BackgroundDesert.png")'>
               <option value="1">Město (výchozí)</option>
               <option value="2">Les</option>
@@ -87,8 +90,13 @@
             <input type="file" class="file" id="inputBackground" name="avatar" accept="image/png, image/jpeg" onchange="onCustomTextureChange('inputBackground', 'backgroundIcon')"/>
           </div>
         </div>
+
+        <div class="sendButton">
+          <button type="button" class="sendButton" onclick="sendEmail()" > Zaplatit </button>
+        </div>
+        
       </div>
+
     </content>
-  
 
 </body></html>
