Scaling elementů, fade in animace u textu

--- a/GameChoice/gameChoice.html
+++ b/GameChoice/gameChoice.html
@@ -34,7 +34,9 @@
           </div>
           <img class="screenshot" src="Screenshots/Pacman.png" alt="icon">
           <div class="TextBox">
-            <button> Vybrat </button>
+            <form action="Games/pacman.html">
+              <button> Vybrat </button>
+            </form>
           </div>
         </div>
         <div class="package">
@@ -44,7 +46,9 @@
           </div>
           <img class="screenshot" src="Screenshots/Snake.png" alt="icon">
           <div class="TextBox">
-            <button> Vybrat </button>
+            <form action="Games/snake.html">
+              <button> Vybrat </button>
+            </form>
           </div>
         </div>
         <div class="package">
@@ -54,17 +58,20 @@
           </div>
           <img class="screenshot" src="Screenshots/Collecting.png" alt="icon">
           <div class="TextBox">
-            <button> Vybrat </button>
+            <form action="Games/collecting.html">
+              <button> Vybrat </button>
+            </form>
           </div>
         </div>
         <div class="package">
-          
           <div class="TextBoxTitle">
             <p2> <b> Chytání jablek </b> </p2>
           </div>
           <img class="screenshot" src="Screenshots/Catching.png" alt="icon">
           <div class="TextBox">
-            <button> Vybrat </button>
+            <form action="Games/catching.html">
+              <button> Vybrat </button>
+            </form>
           </div>
         </div>
       </div>
