--- a/GameChoice/Games/catching.html
+++ b/GameChoice/Games/catching.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-
+  <link rel="icon" type="jpg/png" href="../../pageIcon.png">
   <link rel="stylesheet" type="text/css" href="topnav.css">
   <link rel="stylesheet" type="text/css" href="gameOptions.css">
   <script src="gameOptions.js"></script>
