--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="cz"><head><meta charset="UTF-8">
   <head>
-
+  <link rel="icon" type="jpg/png" href="pageIcon.png">
   <link rel="stylesheet" type="text/css" href="topnav.css">
   <link rel="stylesheet" type="text/css" href="contact.css">
   
