--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Vlastní hry</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="">
+  <link rel="icon" type="jpg/png" href="pageIcon.png">
 
   <link rel="stylesheet" type="text/css" href="topnav.css">
   <link rel="stylesheet" type="text/css" href="index.css">
